k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare-insurance
  labels:
    istio-injection: enabled
